# cookiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  makefile  mypy.ini  pyproject.toml  requirements-poetry.txt
{{cookiecutter.project_name}}/cicdyaml/: python-tests-and-static-checks.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.org_name}}/{{cookiecutter.project_name}}/: cli.py
{{cookiecutter.project_name}}/tests/: test_something.py
