# https://python-poetry.org/docs/pyproject/
# https://www.python.org/dev/peps/pep-0621/
[tool.poetry]
name = "{{cookiecutter.org_name}}.{{cookiecutter.project_name}}"
version = "0.1.0-alpha.0"
description = ""
authors = []
license = "Proprietary"
readme = "README.md"
packages = [
    {include = "{{cookiecutter.org_name}}", from = "src"}
]

[tool.poetry.scripts]
"{{cookiecutter.org_name}}-{{cookiecutter.project_short_name}}-py" = "{{cookiecutter.org_name}}.{{cookiecutter.project_name}}.cli:main"

[tool.poetry.dependencies]
python = "^3.6.2"
click = "^7.1.0"
dataclasses = { version = "^0.8", python = ">=3.6,<3.7" }
typer = "^0.3.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
black = { version = "21.7b0", allow-prereleases = true }
isort = "^5.9.3"
coverage = "^5.5"
flake8 = "^3.9.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^21.4.0"
flake8-isort = "^4.0.0"
invoke = "^1.5.0"
mypy = "^0.812"
pre-commit = "^2.13.0"
pytest = "^6.2.0"
pytest-cov = "^2.12.0"
pytest-subtests = "^0.4.0"
tox = "^3.23.0"
typing-extensions = "^3.10.0"

[tool.black]
target-version = ['py38']
extend-exclude = """
/(
    generated/{{cookiecutter.org_name}}
)/
"""

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
